User Manual Update

--- a/User Manual/GUI/ENG-Editor.html
+++ b/User Manual/GUI/ENG-Editor.html
@@ -69,9 +69,9 @@ Engine Power</span> [kW]<br>
 [rpm]<br>
 
 <br><br>
-<a name="fld"></a><span style="font-weight: bold;">Full Load and Drag Curve</span>
+<a name="fld"></a><span style="font-weight: bold;">Full Load and Drag Curves</span>
 (.vfld)<br>
-<div style="margin-left: 40px;">Stationary full load curve described as a function of engine speed by <span style="font-weight: bold;">Max. Torque</span> (column 2). Engine <span style="font-weight: bold;">Motoring Torque</span> is described in column 3. Transient effects on full-load torque built up are considered by a PT1 approach. The related <span style="font-weight: bold;">PT1 time constant</span> is considered in the model as a function of engine speed and has to be specified in column 4.&nbsp;</div><br>
+<div style="margin-left: 40px;">Stationary full load curve described as a function of engine speed by <span style="font-weight: bold;">Max. Torque</span> (column 2). Engine <span style="font-weight: bold;">Motoring Torque</span> is described in column 3. Transient effects on full-load torque built up are considered by a PT1 approach. The related <span style="font-weight: bold;">PT1 time constant</span> is considered in the model as a function of engine speed and has to be specified in column 4. <br><br>Different .vfld files can be assigned to each gear or range of gears. See "Add gears" below.<br></div><br>
 <div style="margin-left: 40px;"><span style="font-weight: bold;">Format</span>
 (comma-separated, dot = decimal-mark):
 </div>
