- User Manual updated - Update Notes updated (still open: File Signing) - Load-dependent RRC finished

--- a/User Manual/GUI/ENG-Editor.html
+++ b/User Manual/GUI/ENG-Editor.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
-<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Engine Editor - VECTO User Manual</title></head>
-<body>&nbsp;<map name="linkmap"><area shape="rect" coords="12,33,31,50&quot;" href="#new"><area shape="rect" coords="34,33,52,52&quot;" href="#open"><area shape="rect" coords="57,33,76,50&quot;" href="#save"><area shape="rect" coords="79,32,99,51&quot;" href="#saveas"><area shape="rect" coords="108,33,132,51&quot;" href="#sendto"><area shape="rect" coords="130,113,504,133&quot;" href="#make"><area shape="rect" coords="132,149,190,170&quot;" href="#power"><area shape="rect" coords="132,176,194,196&quot;" href="#ccm"><area shape="rect" coords="133,203,192,222&quot;" href="#inertia"><area shape="rect" coords="410,149,471,170&quot;" href="#nidle"><area shape="rect" coords="411,177,471,199&quot;" href="#nrated"><area shape="rect" coords="16,251,504,272&quot;" href="#fld"><area shape="rect" coords="16,303,505,323&quot;" href="#map"><area shape="rect" coords="17,353,505,375&quot;" href="#cal"><area shape="rect" coords="348,394,420,412&quot;" href="#ok"><area shape="rect" coords="430,392,501,414&quot;" href="#cancel"></map>
+<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Engine Editor - VECTO User Manual</title>
+
+</head>
+<body>
+&nbsp;<map name="linkmap"><area shape="rect" coords="12,33,31,50&quot;" href="#new"><area shape="rect" coords="34,33,52,52&quot;" href="#open"><area shape="rect" coords="57,33,76,50&quot;" href="#save"><area shape="rect" coords="79,32,99,51&quot;" href="#saveas"><area shape="rect" coords="108,33,132,51&quot;" href="#sendto"><area shape="rect" coords="130,113,504,133&quot;" href="#make"><area shape="rect" coords="132,149,190,170&quot;" href="#power"><area shape="rect" coords="132,176,194,196&quot;" href="#ccm"><area shape="rect" coords="133,203,192,222&quot;" href="#inertia"><area shape="rect" coords="410,149,471,170&quot;" href="#nidle"><area shape="rect" coords="411,177,471,199&quot;" href="#nrated"><area shape="rect" coords="19,227,503,387&quot;" href="#fld"><area shape="rect" coords="20,420,503,442&quot;" href="#map"><area shape="rect" coords="19,469,502,491&quot;" href="#cal"><area shape="rect" coords="346,506,421,528&quot;" href="#ok"><area shape="rect" coords="429,506,502,529&quot;" href="#cancel"></map>
 <table style="width: 100%; height: 54px; text-align: left; margin-left: auto; margin-right: auto;" border="0" cellpadding="2" cellspacing="2">
 <tbody>
 <tr>
@@ -17,7 +20,7 @@ Manual</span></a><span style="color: rgb(0, 0, 0); font-family: 'Times New Roman
 <div style="text-align: left; font-family: Verdana;">
 <h2>Engine Editor</h2>
 </div>
-<img src="pics/ENG-Editor.PNG" style="width: 524px; height: 449px;" alt="eng" usemap="#linkmap"><br>
+<img src="pics/ENG-Editor.PNG" style="width: 524px; height: 563px;" alt="eng" usemap="#linkmap"><br>
 <span style="font-family: Verdana;"><br>
 <br>
 </span>
@@ -26,20 +29,23 @@ file</span><br>
 <div style="margin-left: 40px;">Create a new empty .veng
 file<br>
 </div>
-<br><br>
+<br>
+<br>
 <img src="../pics/icons/Open-icon.png" style="width: 16px; height: 16px;" alt="open"><span style="font-weight: bold;"><a name="open"></a>Open
 existing file</span><br>
 <div style="margin-left: 40px;">Open an existing .veng
 file<br>
 </div>
-<span style="font-family: Verdana;"></span><br><br>
+<span style="font-family: Verdana;"></span><br>
+<br>
 <span style="font-family: Verdana;"></span><img src="../pics/icons/Actions-document-save-icon.png" style="width: 16px; height: 16px;" alt="save"><a name="save"></a> <span style="font-weight: bold;">Save
 current file</span><br>
-<span style="font-family: Verdana;"></span><br><br>
+<span style="font-family: Verdana;"></span><br>
+<br>
 <span style="font-family: Verdana;"></span><img src="../pics/icons/Actions-document-save-as-icon.png" style="width: 16px; height: 16px;" alt="SaveAs"><a name="saveas"></a> <span style="font-weight: bold;">Save
 file as...</span><br>
-
-<span style="font-family: Verdana;"></span><br><br>
+<span style="font-family: Verdana;"></span><br>
+<br>
 <span style="font-family: Verdana;"></span><img src="../pics/icons/export-icon.png" style="width: 16px; height: 16px;" alt="sendto"><a name="sendto"></a> <span style="font-weight: bold;">Send
 current file to the <a href="VECTO-Editor.html">VECTO
 Editor</a></span><br>
@@ -47,31 +53,54 @@ Editor</a></span><br>
 file was opened via the <a href="VECTO-Editor.html">VECTO
 Editor</a> the file will be sent automatically when saved.<br>
 </div>
-<span style="font-family: Verdana;"></span><br><br>
+<span style="font-family: Verdana;"></span><br>
+<br>
 <span style="font-family: Verdana;"></span><span style="font-weight: bold;"><a name="make"></a>Make
 and Model</span><br>
-<div style="margin-left: 40px;">Free text defining the engine model, type, etc.<br>
+<div style="margin-left: 40px;">Free text defining the
+engine model, type, etc.<br>
 </div>
-<span style="font-family: Verdana;"></span><br><br>
+<span style="font-family: Verdana;"></span><br>
+<br>
 <span style="font-family: Verdana;"></span><a name="power"></a><span style="font-weight: bold;">Rated
 Engine Power</span> [kW]<br>
-
-<br><br>
+<br>
+<br>
 <a name="ccm"></a><span style="font-weight: bold;">Displacement</span>
 [ccm]<br>
-
-<div style="margin-left: 40px;"><span style="font-family: Verdana;"></span>Not used in the current version (in future planned to be used for calculation of rotational inertia)</div><br>
-<span style="font-family: Verdana;"></span><a name="inertia"></a><span style="font-weight: bold;">Inertia including Flywheel</span> [kgm<sup>2</sup>]<br><div style="margin-left: 40px;">Inertia for rotating parts including engine flywheel<span style="font-family: Verdana;"></span><br></div><br>
-<span style="font-family: Verdana;"></span><a name="nidle"></a><span style="font-weight: bold;">Idling Engine Speed</span> [rpm]<br>
-
-<div style="margin-left: 40px;">Low idle, applied in simulation for vehicle standstill in neutral gear position.<br></div><br>
+<div style="margin-left: 40px;"><span style="font-family: Verdana;"></span>Not used in the
+current version (in future planned to be used for calculation of
+rotational inertia)</div>
+<br>
+<span style="font-family: Verdana;"></span><a name="inertia"></a><span style="font-weight: bold;">Inertia
+including Flywheel</span> [kgm<sup>2</sup>]<br>
+<div style="margin-left: 40px;">Inertia for rotating parts
+including engine flywheel<span style="font-family: Verdana;"></span><br>
+</div>
+<br>
+<span style="font-family: Verdana;"></span><a name="nidle"></a><span style="font-weight: bold;">Idling
+Engine Speed</span> [rpm]<br>
+<div style="margin-left: 40px;">Low idle, applied in
+simulation for vehicle standstill in neutral gear position.<br>
+</div>
+<br>
 <a name="nrated"></a><span style="font-weight: bold;">Rated Engine Speed</span>
 [rpm]<br>
-
-<br><br>
-<a name="fld"></a><span style="font-weight: bold;">Full Load and Drag Curves</span>
+<br>
+<br>
+<a name="fld"></a><span style="font-weight: bold;">Full
+Load and Drag Curves</span>
 (.vfld)<br>
-<div style="margin-left: 40px;">Stationary full load curve described as a function of engine speed by <span style="font-weight: bold;">Max. Torque</span> (column 2). Engine <span style="font-weight: bold;">Motoring Torque</span> is described in column 3. Transient effects on full-load torque built up are considered by a PT1 approach. The related <span style="font-weight: bold;">PT1 time constant</span> is considered in the model as a function of engine speed and has to be specified in column 4. <br><br>Different .vfld files can be assigned to each gear or range of gears. See "Add gears" below.<br></div><br>
+<div style="margin-left: 40px;">Multiple Full Load and Drag Curves can be defined and assigned to different gears. Gear "0" must be assigned for idling and <a href="VECTO-Editor.html#engonly">Engine Only Mode</a>.<br>Use the <img style="width: 16px; height: 16px;" alt="add" src="../pics/icons/plus-circle-icon.png"> and <img style="width: 16px; height: 16px;" alt="remove" src="../pics/icons/minus-circle-icon.png"> buttons to add or
+remove&nbsp;.vfld files. Doubleclick entries to edit existing configurations.<br><br>The .vfld file contains the stationary full load curve&nbsp;as a function of engine speed: <span style="font-weight: bold;">Max. Torque</span> (column
+2). Engine <span style="font-weight: bold;">Motoring
+Torque</span> is defined in column 3.<br><br>Transient effects on
+full-load torque built up are considered by a PT1 approach. The related
+<span style="font-weight: bold;">PT1 time constant</span>
+is considered in the model as a function of engine speed and has to be
+specified in column 4.<br>
+</div>
+<br>
 <div style="margin-left: 40px;"><span style="font-weight: bold;">Format</span>
 (comma-separated, dot = decimal-mark):
 </div>
@@ -82,8 +111,10 @@ Engine Power</span> [kW]<br>
 <th style="text-align: center; width: 148px;"><span style="color: rgb(51, 102, 255);">c&nbsp;</span>Engine
 Speed</th>
 <th style="text-align: center; width: 156px;">Max.
-Torque<br>(Static full load)</th>
-<th style="text-align: center; width: 149px;">Motoring Torque</th>
+Torque<br>
+(Static full load)</th>
+<th style="text-align: center; width: 149px;">Motoring
+Torque</th>
 <td style="width: 149px; text-align: center;"><span style="font-weight: bold;">PT1 time constant</span></td>
 </tr>
 <tr>
@@ -112,10 +143,35 @@ lines (header, comments,
 etc.) </span><span style="text-decoration: underline; font-style: italic; color: rgb(51, 102, 255);">must</span><span style="font-style: italic; color: rgb(51, 102, 255);"> start
 with "<span style="font-weight: bold;">c</span> "</span><br>
 </div>
-<br><div style="margin-left: 40px;">The PT1 approach to calculate the dynamic full load is applied using this formula:<br><img style="width: 555px; height: 65px;" alt="" src="pics/ENG-PT1.png"><br>with:<br><div style="margin-left: 40px;">n<sub>i</sub> = current engine speed<br>T(n<sub>i</sub>) = PT1 time constant&nbsp;at engine speed&nbsp;n<sub>i</sub> (col. 4 in .vfld file)<br>P_fld_stat(n<sub>i</sub>) = Static full load at engine speed&nbsp;n<sub>i</sub> (col. 2 in .vfld file)<br>P_act<sub>i-1</sub> = Engine power in previous time stet</div><br></div><br>
-<a name="map"></a><span style="font-weight: bold;">Fuel Consumption Map</span>
+<br>
+<div style="margin-left: 40px;">The PT1 approach to
+calculate the dynamic full load is applied using this formula:<br>
+<img style="width: 555px; height: 65px;" alt="" src="pics/ENG-PT1.png"><br>
+with:<br>
+<div style="margin-left: 40px;">n<sub>i</sub>
+= current engine speed<br>
+T(n<sub>i</sub>) = PT1 time constant&nbsp;at engine
+speed&nbsp;n<sub>i</sub> (col. 4 in .vfld file)<br>
+P_fld_stat(n<sub>i</sub>) = Static full load at engine
+speed&nbsp;n<sub>i</sub> (col. 2 in .vfld file)<br>
+P_act<sub>i-1</sub> = Engine power in previous time stet</div>
+<br>
+</div>
+<br>
+<a name="map"></a><span style="font-weight: bold;">Fuel
+Consumption Map</span>
 (.vmap)<br>
-<div style="margin-left: 40px;">Fuel Consumption Map measured in stationary conditions.<br>The following rules apply:<br><ul><li>The map must cover the full engine range between full load and motoring curve. <span style="font-weight: bold; color: red;">Extrapolation is not possible and will abort the calculation!</span></li><li>At least four points are required.</li></ul></div><br>
+<div style="margin-left: 40px;">Fuel Consumption Map
+measured in stationary conditions.<br>
+The following rules apply:<br>
+<ul>
+<li>The map must cover the full engine range between full load
+and motoring curve. <span style="font-weight: bold; color: red;">Extrapolation
+is not possible and will abort the calculation!</span></li>
+<li>At least four points are required.</li>
+</ul>
+</div>
+<br>
 <div style="margin-left: 40px;"><span style="font-weight: bold;">Format</span>
 (comma-separated, dot = decimal-mark):
 </div>
@@ -150,34 +206,62 @@ Consumption</th>
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-style: italic; color: rgb(51, 102, 255);">Note:</span><span style="font-style: italic; color: rgb(51, 102, 255);"> text
 lines (header, comments,
 etc.) </span><span style="text-decoration: underline; font-style: italic; color: rgb(51, 102, 255);">must</span><span style="font-style: italic; color: rgb(51, 102, 255);"> start
-with "<span style="font-weight: bold;">c</span> "</span><br><h2>Fuel Map Interpolation</h2>The interpolation is based on <a href="http://en.wikipedia.org/wiki/Delaunay_triangulation">Delaunay Triangulation&nbsp;</a><a href="http://en.wikipedia.org/wiki/Delaunay_triangulation"><img style="border: 0px solid ; width: 12px; height: 12px;" alt="" src="../pics/misc/external-icon%2012x12.png"></a> and works as follows:<br><ol><li>Triangulate
-the given rpm/torque/fuel&nbsp;points (= x,y,z)&nbsp; to create a
+with "<span style="font-weight: bold;">c</span> "</span><br>
+<h2>Fuel Map Interpolation</h2>
+The interpolation is based on <a href="http://en.wikipedia.org/wiki/Delaunay_triangulation">Delaunay
+Triangulation&nbsp;</a><a href="http://en.wikipedia.org/wiki/Delaunay_triangulation"><img style="border: 0px solid ; width: 12px; height: 12px;" alt="" src="../pics/misc/external-icon%2012x12.png"></a> and
+works as follows:<br>
+<ol>
+<li>Triangulate
+the given rpm/torque/fuel&nbsp;points (= x,y,z)&nbsp; to create
+a
 network of triangles with each point of the map being part of at least
-one triangle.</li><li>Find the triangle where the to-be-interpolated
+one triangle.</li>
+<li>Find the triangle where the to-be-interpolated
 load point (x,y) is inside. If no triangle meets the criterion the
-calculation will be aborted.</li><li>Calculate the z-value (= fuel) of the given x,y-point in the plane of the triangle</li></ol>
+calculation will be aborted.</li>
+<li>Calculate the z-value (= fuel) of the given x,y-point in
+the plane of the triangle</li>
+</ol>
 </div>
-<br><br>
-<a name="cal"></a><span style="font-weight: bold;">Calibration Test Cycle</span><br>
-<div style="margin-left: 40px;">Not implemented yet (planned: import of
+<br>
+<br>
+<a name="cal"></a><span style="font-weight: bold;">Calibration
+Test Cycle</span><br>
+<div style="margin-left: 40px;">Not implemented yet
+(planned: import of
 transient calibration test cycle and model internal calculation of
 correction factor(s) to be applied to stationary fuel consumption map.<br>
 </div>
-<br><img style="width: 28px; height: 21px;" alt="" src="../pics/misc/browse.png"> <span style="font-weight: bold;">Open file browser</span>.<br><br><img style="width: 22px; height: 22px;" alt="" src="../pics/misc/OpenFile.PNG"> <span style="font-weight: bold;">Open file</span> with <a href="../../GRAPHi/documentation/HTML%20Manual/mainwindow.html">GRAPHi</a> or an user-defined tool (see <a href="settings.html#opencmd">File Open Command)</a>.<br><br>
+<br>
+<img style="width: 28px; height: 21px;" alt="" src="../pics/misc/browse.png"> <span style="font-weight: bold;">Open file browser</span>.<br>
+<br>
+<img style="width: 22px; height: 22px;" alt="" src="../pics/misc/OpenFile.PNG"> <span style="font-weight: bold;">Open file</span> with <a href="../../GRAPHi/documentation/HTML%20Manual/mainwindow.html">GRAPHi</a>
+or an user-defined tool (see <a href="settings.html#opencmd">File
+Open Command)</a>.<br>
+<br>
 <img src="../pics/misc/OK.png" style="width: 75px; height: 23px;" alt="OK"><a name="ok"></a><span style="font-weight: bold;">Save
 and close file</span><br>
 <div style="margin-left: 40px;">If necessary the file path
 in the <a href="VECTO-Editor.html">VECTO Editor</a>
 will be updated.<br>
 </div>
-<br><br>
+<br>
+<br>
 <img src="../pics/misc/Cancel.png" style="width: 75px; height: 23px;" alt="Cancel"><a name="cancel"></a><span style="font-weight: bold;">
 Cancel without saving</span><br>
 <span style="font-weight: bold;"></span></div>
-
-<table style="text-align: left; width: 100%; height: 1100px;" border="0" cellpadding="2" cellspacing="2"><tbody><tr><td></td></tr></tbody></table>
-
-<div style="text-align: left;"><div style="text-align: left;"><div style="text-align: left;"><hr style="width: 100%; height: 2px;"><a href="../contact.html">Contact</a>
+<table style="text-align: left; width: 100%; height: 1100px;" border="0" cellpadding="2" cellspacing="2">
+<tbody>
+<tr>
+<td></td>
+</tr>
+</tbody>
+</table>
+<div style="text-align: left;">
+<div style="text-align: left;">
+<div style="text-align: left;">
+<hr style="width: 100%; height: 2px;"><a href="../contact.html">Contact</a>
 </div>
 </div>
 </div>
