--- a/User Manual/GUI/mainform.html
+++ b/User Manual/GUI/mainform.html
@@ -125,7 +125,7 @@ selected mode (see <a href="mainform_options.html">Options</a>).<br>
 <span style="font-weight: bold;"><a name="filelist"></a>Job
 Files List</span><br>
 <div style="margin-left: 40px;">Job files (.vecto) listed
-here will be used for calculation. Unchecked files will be ignored!<br>
+here will be used for calculation. Unchecked files will be ignored!<br><br>Doubleclick entries to edit job files with the <a href="VECTO-Editor.html">VECTO Editor</a>.<br>
 </div>
 <br>
 <div style="margin-left: 40px;"><img style="width: 15px; height: 15px;" alt="cb" src="../pics/misc/checkbox.png"><span style="font-weight: bold;"><a name="checkall"></a>
