--- a/User Manual/GUI/settings.html
+++ b/User Manual/GUI/settings.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
-<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Settings - VECTO User Manual</title></head>
+<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Settings - VECTO User Manual</title>
+
+</head>
 <body>
-<map name="mainformoptlinks"><area shape="rect" coords="23,69,496,96&quot;" href="#workdir"><area shape="rect" coords="150,148,187,167&quot;" href="#log"><area shape="rect" coords="246,129,494,220&quot;" href="#opencmd"><area shape="rect" coords="92,259,143,280&quot;" href="#air"><area shape="rect" coords="272,257,320,279&quot;" href="#fuel"><area shape="rect" coords="127,302,177,322&quot;" href="#pi"><area shape="rect" coords="43,355,148,382&quot;" href="#reset"></map>
+<map name="mainformoptlinks"><area shape="rect" coords="23,69,496,96&quot;" href="#workdir"><area shape="rect" coords="150,148,187,167&quot;" href="#log"><area shape="rect" coords="35,185,204,205&quot;" href="#json"><area shape="rect" coords="246,129,494,220&quot;" href="#opencmd"><area shape="rect" coords="92,259,143,280&quot;" href="#air"><area shape="rect" coords="272,257,320,279&quot;" href="#fuel"><area shape="rect" coords="127,302,177,322&quot;" href="#pi"><area shape="rect" coords="43,355,148,382&quot;" href="#reset"></map>
 <table style="width: 100%; height: 54px; text-align: left; margin-left: auto; margin-right: auto;" border="0" cellpadding="2" cellspacing="2">
 <tbody>
 <tr>
@@ -50,14 +52,15 @@ Size Limit</span> [MB]<br>
 the logfile (LOG.txt in the application folder) reaches this size it
 will be restarted. One backup is always stored as LOG_backup.txt.<br>
 </div>
-<br>
-<br>
+<br><a name="json"></a> <span style="font-weight: bold;">In- and Output in JSON format</span><br><div style="margin-left: 40px;">Enables in- and output in JSON format. Old <a href="VECTO-Editor.html">.vecto</a>, <a href="VEH-Editor.html">.vveh</a>, <a href="ENG-Editor.html">.veng</a> and <a href="GBX-Editor.html">.vgbx</a> input files are supported and can be converted to JSON using the respective editors.<br></div>
+
 <span style="font-weight: bold;"><a name="opencmd"></a>File
 Open Command</span><br>
 <div style="margin-left: 40px;">This command will be used
 to open CSV Input Files like Driving Cycles (.vdri).&nbsp;See: <a href="http://en.wikipedia.org/wiki/Run_command">Run command <img style="border: 0px solid ; width: 12px; height: 12px;" alt="" src="../pics/misc/external-icon%2012x12.png"></a><br>
 <span style="font-weight: bold;">Name</span>: Name
-of the command as it will be shown in the menu when clicking the <img style="width: 22px; height: 22px;" alt="" src="../pics/misc/OpenFile.PNG" align="top"> button (beside the option to open with <a href="../../GRAPHi/documentation/HTML%20Manual/mainwindow.html">GRAPHi</a>).<br>
+of the command as it will be shown in the menu when clicking the <img style="width: 22px; height: 22px;" alt="" src="../pics/misc/OpenFile.PNG" align="top"> button
+(beside the option to open with <a href="../../GRAPHi/documentation/HTML%20Manual/mainwindow.html">GRAPHi</a>).<br>
 <span style="font-weight: bold;">Command</span>: The
 actual command.<br>
 <br>
