- User manual updates - Exact road gradient calculation (see changelog)

--- a/User Manual/GUI/GBX-Editor.html
+++ b/User Manual/GUI/GBX-Editor.html
@@ -155,8 +155,8 @@ with "<span style="font-weight: bold;">c</span> "</span><br></div>
 <br>
 <div style="margin-left: 40px;"><span style="font-weight: bold;">*Input Speed &amp;
 Torque always
-means <span style="text-decoration: underline;">engine-side</span>. <span style="color: red;">The Torque Loss Map must include negative torque
-values for engine motoring operation!</span></span><br></div><br></div><br>
+means <span style="text-decoration: underline;">engine-side</span>.</span><br><br><span style="font-weight: bold;">Sign of torque values:</span><br><ul><li>Input Torque &gt; 0 for normal driving operation</li><li>Input Torque &lt; 0 for motoring operation.&nbsp;<span style="font-weight: bold;"><span style="color: red;">The Torque Loss Map must include negative torque
+values for engine motoring operation!</span></span></li><li>Torque Loss is always positive!</li></ul><span style="font-weight: bold;">Calculation of Output Torque (axle-side)</span>:<br><div style="margin-left: 40px;">VECTO calculates the output torque using the formula, independent from the current of operation mode.<br><img style="width: 600px; height: 39px;" alt="" src="pics/GBX-Editor_Tout.PNG"></div></div><br></div><br>
 <br>
 <big><big><span style="font-weight: bold;">Gear
 shift parameters</span></big></big><br>
@@ -308,8 +308,7 @@ The torque converter characteristics must also be defined for speed
 ratios of more than one (<span style="font-weight: bold;"></span>&#957;&gt;1)
 in order to calculate overrun conditions (torque&lt;0).<br>
 <br>
-<span style="font-weight: bold;">Torque Loss
-Map&nbsp;Format</span> (comma-separated, dot = decimal-mark):
+<span style="font-weight: bold;">Torque Converter </span><span style="font-weight: bold;">Characteristics File </span><span style="font-weight: bold;">Format</span> (comma-separated, dot = decimal-mark):
 <table style="background-color: white; text-align: left; height: 115px; width: 560px; margin-left: 0px;" border="1" cellpadding="2" cellspacing="1">
 <tbody>
 <tr>
