--- a/User Manual/fileformat/VSUM.html
+++ b/User Manual/fileformat/VSUM.html
@@ -70,10 +70,9 @@ File</td>
 <td>Average vehicle speed</td>
 </tr>
 <tr style="height: 15pt;" height="20">
-<td style="height: 15pt;" height="20">road
-grad</td>
-<td>[%]</td>
-<td>Average road gradient (time-averaged)</td>
+<td style="height: 15pt;" height="20">&#8710;altitude</td>
+<td>[m]</td>
+<td>Altitude difference between start and end of cycle</td>
 </tr>
 <tr style="height: 15pt;" height="20">
 <td style="height: 15pt;" height="20">n_norm</td>
