* Bugfix: Eco Roll didn't go into motoring operation when Overspeed-Limit was reached (could cause higher FC than Overspeed Mode) * Minor update in demo data (12t motoring curve) * Cleared up Demo Data * Small fix in User Manual

--- a/User Manual/GUI/GBX-Editor.html
+++ b/User Manual/GUI/GBX-Editor.html
@@ -156,7 +156,7 @@ with "<span style="font-weight: bold;">c</span> "</span><br></div>
 <div style="margin-left: 40px;"><span style="font-weight: bold;">*Input Speed &amp;
 Torque always
 means <span style="text-decoration: underline;">engine-side</span>.</span><br><br><span style="font-weight: bold;">Sign of torque values:</span><br><ul><li>Input Torque &gt; 0 for normal driving operation</li><li>Input Torque &lt; 0 for motoring operation.&nbsp;<span style="font-weight: bold;"><span style="color: red;">The Torque Loss Map must include negative torque
-values for engine motoring operation!</span></span></li><li>Torque Loss is always positive!</li></ul><span style="font-weight: bold;">Calculation of Output Torque (axle-side)</span>:<br><div style="margin-left: 40px;">VECTO calculates the output torque using the formula, independent from the current of operation mode.<br><img style="width: 600px; height: 39px;" alt="" src="pics/GBX-Editor_Tout.PNG"></div></div><br></div><br>
+values for engine motoring operation!</span></span></li><li>Torque Loss is always positive!</li></ul><span style="font-weight: bold;">Calculation of Output Torque</span>:<br><div style="margin-left: 40px;">VECTO calculates the output torque using this formula, independent from the current operation mode (driving/braking).<br><img style="width: 600px; height: 39px;" alt="" src="pics/GBX-Editor_Tout.PNG"></div></div><br></div><br>
 <br>
 <big><big><span style="font-weight: bold;">Gear
 shift parameters</span></big></big><br>
