- pre-Report-Update Commit

--- a/User Manual/GUI/GBX-Editor.html
+++ b/User Manual/GUI/GBX-Editor.html
@@ -293,7 +293,7 @@ specific reference engine speed (see
 below).<br>
 <br>
 The Input Torque at &nbsp;reference engine speed is needed to
-needed to calculate the actual engine torque using this formula:<br>
+calculate the actual engine torque using this formula:<br>
 <img style="width: 300px; height: 72px;" alt="" src="pics/GBX-TC2.png"><br>
 with:<br>
 <div style="margin-left: 40px;">T<sub>in</sub>
