* Started adding XML comments (open) * Added pdf report output * Added charts in files editors * Added declaration mode features * Removed GRAPHi calls * Added visualizer for modal results (replaces GRAPHi)(open) * Changes cConfig format to JSON * Cleaned up code

--- a/User Manual/GUI/GBX-Editor.html
+++ b/User Manual/GUI/GBX-Editor.html
@@ -118,9 +118,10 @@ gear shift event.<br>
 </ul>Use the <img style="width: 16px; height: 16px;" alt="add" src="../pics/icons/plus-circle-icon.png"> and <img style="width: 16px; height: 16px;" alt="remove" src="../pics/icons/minus-circle-icon.png"> buttons to add or
 remove gears form the vehicle. Doubleclick entries to edit existing gears.<br><ul>
 <li>Gear "A" defines the ratio of the axle transmission /
-differential.</li><li>Column "TC" (AT only) defines which gears are using the torque converter (lock-up clutch open). Details <a href="#tcon">below</a>.</li><li>Column "Loss Map or Efficiency" allows to define either a constant efficiency value or a loss map in the following format:</li></ul>
-<div style="margin-left: 40px;"><span style="font-weight: bold;">Torque Loss
-Map&nbsp;Format</span> (comma-separated, dot = decimal-mark):</div></div>
+differential.</li><li>Column "TC" (AT only) defines which gears are using the torque converter (lock-up clutch open). Details <a href="#tcon">below</a>.</li><li>Column
+"Loss Map or Efficiency" allows to define either a constant efficiency
+value or a loss map (.vtlm) in the following format:</li></ul>
+<div style="margin-left: 40px;"><span style="font-weight: bold;">.vtlm Format</span> (comma-separated, dot = decimal-mark):</div></div>
 <table style="background-color: white; text-align: left; height: 115px; width: 481px; margin-left: 80px;" border="1" cellpadding="2" cellspacing="1">
 <tbody>
 <tr>
